mejora de la configuracion de la estamina

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/AI/Sword
+ContentBrowserDrawer.SelectedPaths=/Game/BlockM
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1251,30 +1251,30 @@ D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem2=/Game/ThirdPerson/Input/IMC_Default
-MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem4=/Game/Animation/Running_UE
-MRUItem5=/Game/Animation/Esquivar
-MRUItem6=/Game/Animation/Idle_UE
-MRUItem7=/Game/Chekpoint/Chekpoint
-MRUItem8=/Game/Enemy/Enemy_Health
-MRUItem9=/Game/Enemy/BP_EnemySpawn
-MRUItem10=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem11=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem12=/Game/AI/Sword/Slash
-MRUItem13=/Game/AI/Sword/Sword_Skeleton
-MRUItem14=/Game/AI/Sword/Sword
-MRUItem15=/Game/Enemy/FlyingBack
-MRUItem16=/Game/Enemy/BP_SpeedEnemySpawn
-MRUItem17=/Game/Enemy/DeathDie
-MRUItem18=/Game/Enemy/Death
-MRUItem19=/Game/AI/Sword/SwordNotify
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/Animation/Running_UE
+MRUItem2=/Game/Animation/Runnin_montage
+MRUItem3=/Game/BlockM/Block_Animation
+MRUItem4=/Game/Animation/Esquivar
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/ThirdPerson/Input/IMC_Default
+MRUItem7=/Game/ThirdPerson/Input/Actions/IA_Sprint
+MRUItem8=/Game/Animation/Idle_UE
+MRUItem9=/Game/Chekpoint/Chekpoint
+MRUItem10=/Game/Enemy/Enemy_Health
+MRUItem11=/Game/Enemy/BP_EnemySpawn
+MRUItem12=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem13=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem14=/Game/AI/Sword/Slash
+MRUItem15=/Game/AI/Sword/Sword_Skeleton
+MRUItem16=/Game/AI/Sword/Sword
+MRUItem17=/Game/Enemy/FlyingBack
+MRUItem18=/Game/Enemy/BP_SpeedEnemySpawn
+MRUItem19=/Game/Enemy/DeathDie
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2359,18 +2359,21 @@ InputAction.Action=True
 InputAction.Input=True
 InputMappingContext.Mappings=True
 InputMappingContext.Description=True
+K2Node_InputAction.Input=True
+EditorAnimSegment.Animation Segment=True
+EditorAnimSegment.Montage=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
-AnimSequenceBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
-AnimationAsset="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
+AnimSequenceBase="\"Object\" "
+AnimationAsset="\"Object\" "
 AnimMontage="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 AnimCompositeBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 CapsuleComponent="\"Object\" "
@@ -2562,6 +2565,8 @@ BP_ThirdPersonCharacter_C=
 Hunt_for_bloodCharacter=
 InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[15]\" "
+K2Node_InputAction="\"Object\" "
+EditorAnimSegment="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2581,7 +2586,7 @@ K2Node_VariableGet.Variable=False
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
@@ -2589,12 +2594,12 @@ Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+BP_ThirdPersonCharacter_C=
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
-EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
@@ -2611,7 +2616,7 @@ K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_TankEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2730,7 +2735,7 @@ SkeletalMesh=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD
 LODInfoUILayout=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint
 InputAction=
-K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2761,6 +2766,7 @@ K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2
 /Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint=1
 /Game/Animation/Runnin_montage.Runnin_montage=0
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
+/Game/Animation/Running_UE.Running_UE=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3096,7 +3102,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=137.600 Y=0.000
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
