--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ ProjectName=Third Person Game Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
