Enemy hearing and atacking
El enemigo ahora te busca si te escucha y si no se pone a dar vueltas y tambien te puede atacakr aunque no te hace daño por los momentos

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AI_Advanced/Task
+ContentBrowserTab1.SelectedPaths=/Game/AI_Advanced
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1253,36 +1253,28 @@ D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AI_Advanced/BT_AI.BT_AI
-OpenAssetsAtExit=/Game/AI_Advanced/BD_AI.BD_AI
-OpenAssetsAtExit=/Game/AI_Advanced/BP_Contoller.BP_Contoller
-OpenAssetsAtExit=/Game/AI_Advanced/BP_SpeedEnemySpawn.BP_SpeedEnemySpawn
-OpenAssetsAtExit=/Game/AI_Advanced/Animations.Animations
-OpenAssetsAtExit=/Game/AI_Advanced/Task/BT_Task_PlayerChase.BT_Task_PlayerChase
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/AI_Advanced/Task/BT_Task_PatrolRandomPoint.BT_Task_PatrolRandomPoint
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI_Advanced/Task/BT_Task_PatrolRandomPoint
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/AI_Advanced/Task/BT_Task_PlayerChase
-MRUItem3=/Game/AI_Advanced/Animations
+MRUItem0=/Game/AI_Advanced/alert
+MRUItem1=/Game/AI_Advanced/WB_InvestigationIcon
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/AI_Advanced/Task/BT_Task_InvestigateValue
 MRUItem4=/Game/AI_Advanced/BP_SpeedEnemySpawn
-MRUItem5=/Game/AI_Advanced/BP_Contoller
-MRUItem6=/Game/AI_Advanced/BT_AI
-MRUItem7=/Game/AI_Advanced/BTTask_PlayerChase
-MRUItem8=/Game/AI/Walk
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem10=/Game/Animation/Running_UE
-MRUItem11=/Game/Animation/Runnin_montage
-MRUItem12=/Game/BlockM/Block_Animation
-MRUItem13=/Game/Animation/Esquivar
-MRUItem14=/Game/ThirdPerson/Input/IMC_Default
-MRUItem15=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem16=/Game/Animation/Idle_UE
-MRUItem17=/Game/Chekpoint/Chekpoint
-MRUItem18=/Game/Enemy/Enemy_Health
-MRUItem19=/Game/Enemy/BP_EnemySpawn
+MRUItem5=/Game/AI_Advanced/BPI_AI_BehaviourTree
+MRUItem6=/Game/AI_Advanced/Task/BT_Task_AtackTarget
+MRUItem7=/Game/AI_Advanced/Services/BT_Service_GetDistanceTarget
+MRUItem8=/Game/AI_Advanced/BT_AI
+MRUItem9=/Game/AI_Advanced/BP_Contoller
+MRUItem10=/Game/AI_Advanced/Task/BT_Task_PatrolRandomPoint
+MRUItem11=/Game/AI_Advanced/Task/BT_Task_PlayerChase
+MRUItem12=/Game/AI_Advanced/Animations
+MRUItem13=/Game/AI_Advanced/BTTask_PlayerChase
+MRUItem14=/Game/AI/Walk
+MRUItem15=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem16=/Game/Animation/Running_UE
+MRUItem17=/Game/Animation/Runnin_montage
+MRUItem18=/Game/BlockM/Block_Animation
+MRUItem19=/Game/Animation/Esquivar
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2460,10 +2452,45 @@ AIController.Networking=True
 AIController.WorldPartition=True
 AIController.Input=True
 AIController.Actor=True
+BT_Service_GetDistanceTarget_C.Description=True
+BT_Service_GetDistanceTarget_C.Service=True
+BT_Service_GetDistanceTarget_C.Default=True
+BT_Task_AtackTarget_C.Task=True
+BT_Task_AtackTarget_C.Description=True
+BTComposite_SimpleParallel.Parallel=True
+BTComposite_SimpleParallel.Description=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BT_Task_InvestigateValue_C.Task=True
+BT_Task_InvestigateValue_C.Description=False
+BT_Task_InvestigateValue_C.Default=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+WidgetComponent.Mobile=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.Blackboard\" "
 Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
@@ -2582,7 +2609,7 @@ WmfMediaSettings="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 BP_Spawner_C=
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
@@ -2618,8 +2645,8 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" "
 ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -2656,7 +2683,7 @@ InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
-BP_EnemySpawn_C=
+BP_EnemySpawn_C="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Character="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Pawn="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Pawn.Pawn|Input\" "
@@ -2665,22 +2692,22 @@ InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[15]\" "
 K2Node_InputAction="\"Object\" "
 EditorAnimSegment="\"Object\" "
-BehaviorTreeGraphNode_Root="\"Object\" "
-BehaviorTreeGraphNode="\"Object\" "
-AIGraphNode="\"Object\" "
+BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 BTComposite_Sequence="\"Object\" "
 BTCompositeNode="\"Object\" "
-BTNode="\"Object\" "
+BTNode="\"Object\" \"Object.Task.TickInterval\" "
 BTComposite_Selector="\"Object\" "
 BT_Task_PatrolRandomPoint_C="\"Object\" "
-BTTask_BlueprintBase="\"Object\" "
-BTTaskNode="\"Object\" "
+BTTask_BlueprintBase="\"Object\" \"Object.Task.TickInterval\" "
+BTTaskNode="\"Object\" \"Object.Task.TickInterval\" "
 BTTask_Wait="\"Object\" "
 BP_SpeedEnemySpawn_C="\"Object\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Animations_C="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
-AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+AIPerceptionComponent="\"Object\" \"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
@@ -2694,6 +2721,19 @@ BTDecorator="\"Object\" "
 BTAuxiliaryNode="\"Object\" "
 AIPerceptionStimuliSourceComponent="\"Object\" \"Object.AI Perception.RegisterAsSourceForSenses\" "
 PathFollowingComponent="\"Object\" "
+BT_Service_GetDistanceTarget_C="\"Object\" "
+BTService_BlueprintBase="\"Object\" "
+BTService="\"Object\" "
+BT_Task_AtackTarget_C="\"Object\" "
+BTComposite_SimpleParallel="\"Object\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
+BTTask_MoveTo="\"Object\" "
+BTTask_BlackboardBase="\"Object\" "
+BT_Task_InvestigateValue_C="\"Object\" \"Object.Task.TickInterval\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2711,19 +2751,19 @@ SkeletalMeshComponent.SkeletalMesh=False
 K2Node_VariableGet.Variable=False
 
 [DetailCustomWidgetExpansion]
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
@@ -2737,7 +2777,7 @@ CapsuleComponent=
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
@@ -2868,6 +2908,10 @@ BTTask_PlayerChase_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_V
 BT_Task_PlayerChase_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 AIPerceptionStimuliSourceComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 AIController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BT_Service_GetDistanceTarget_C=
+Blueprint=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+BT_Task_InvestigateValue_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+K2Node_InputKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2906,6 +2950,7 @@ AIController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/AI_Advanced/Animations.Animations=0
 /Game/AI_Advanced/Task/BT_Task_PlayerChase.BT_Task_PlayerChase=0
 /Game/AI_Advanced/BD_AI.BD_AI=0
+/Game/AI_Advanced/Services/BT_Service_GetDistanceTarget.BT_Service_GetDistanceTarget=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
